--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -62,7 +62,7 @@
         </div>
 
       </div><br>
-      <a href="https://www.facebook.com/ramish.benoit.9/" target="_blank" class="btn btn-outline-success" role="button">View me on FaceBook</a>
+      <a href="https://internship.zuri.team" target="_blank" class="btn btn-outline-success" role="button">Zuri Website</a>
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
@@ -327,6 +327,13 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+          </div>
+
+          <div class="col-lg-4 mt-5 mt-lg-0 d-flex align-items-stretch">
+             
+            <a href="https://internship.zuri.team/"><img src="{% static 'core/img/zuri.png' %}"/></a>
+            <a href="https://hng.tech/"><img src="{% static 'core/img/brand-logo.png' %}"/></a>
+             
           </div>
 
         </div>
